--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.83.1",
+    "@react-navigation/material-top-tabs": "^7.4.12",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-pager-view": "^8.0.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
+    "react-native-tab-view": "^4.2.2",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
