--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/react-native-fontawesome": "github:fortawesome/react-native-fontawesome",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-vector-icons/fontawesome": "^12.4.0",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.10.0",
     "@react-navigation/material-top-tabs": "^7.4.12",
