--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/fontawesome": "^12.4.0",
     "@react-native/new-app-screen": "0.83.1",
-    "@react-navigation/bottom-tabs": "^7.10.0",
+    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/drawer": "^7.7.13",
     "@react-navigation/material-top-tabs": "^7.4.12",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
