--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
   "dependencies": {
     "@fortawesome/react-native-fontawesome": "github:fortawesome/react-native-fontawesome",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-vector-icons/fontawesome": "^12.4.0",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/drawer": "^7.7.13",
     "@react-navigation/material-top-tabs": "^7.4.12",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
+    "@types/react-native-vector-icons": "^12.4.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-pager-view": "^8.0.0",
     "react-native-password-validator": "^1.0.1",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0",
+    "react-native-screens": "^4.20.0",
     "react-native-tab-view": "^4.2.2",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
